# go-tfhe

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  alias.go  go.mod  go.sum  lib.go  lior.sh
.cargo/: config.toml
.github/workflows/: UpdateModule.yml  ci.yml
builder/: web-wasm-test.html
cmd/: main.go  main_test.go  test.go
cmd/keys/: cks  pks
internal/api/: bindings.h  config.go  lib.go  lib_amd64.go  lib_amd64_muslc_darwin.go  lib_wasm.go  log.go  requireLegacy.go  tfhe.go  tfheCipherText.go  tfheCipherText_test.go  types.go  types_test.go  utils_test.go
internal/api/amd64/: bindings.h  init_logger.go  lib.go  libtfhe_wrapper.dylib  link_arm64.go  link_glibclinux_x86_64.go  link_muslc.go  memory.go  version.go
internal/api/wasm/: lib.go  lib_wasm.go  memory.go  version_wasm.go
internal/oracle/: decryption_client.go  decryption_network.go  decryption_network_amd64.go  decryption_network_amd64_muslc.go  decryption_network_wasm.go  http_oracle.go  local_oracle.go  oracle.go
internal/oracle/memorydb/: memorydb.go
libtfhe-wrapper/: Cargo.toml  bindings.h  cbindgen.toml
libtfhe-wrapper/examples/: bind-to-wasm.rs
libtfhe-wrapper/src/: api.rs  cast.rs  encryption.rs  error.rs  imports.rs  keys.rs  lib.rs  logger.rs  math.rs  memory.rs  serialization.rs  stuff.h  to_delete_api.rs
libtfhe-wrapper/src/api/: api.rs  mod.rs
libtfhe-wrapper/src/api/ffi/: api.rs  error.rs  init.rs  memory.rs  mod.rs  version.rs
libtfhe-wrapper/src/api/wasm/: api.rs
scripts/: wasm-stuff.sh
wasm-cmd/: main_wasm.go  wasm_main.go  x_wasm.go
