[package]
name = "tfhe-wrapper"
version = "0.0.2"
publish = false
authors = ["Fhenix <fhenixprotocol@users.noreply.github.com>"]
edition = "2021"
description = "Go bindings for tfhe-rs"
repository = ""
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[example]]
name = "wasm"
path = "examples/bind-to-wasm.rs"
crate-type = ["cdylib"]
#[[example]]
#name = "tfhestatic"
#path = "src/examples/tfhestatic.rs"
#crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []
wasm32 = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
errno = { version = "0.3.1"}

[dependencies]
# "custom-seeder",
# tfhe = { version = "0.3.1", features = ["boolean", "integer", "shortint", "experimental-force_fft_algo_dif4"]  }
tfhe = { git = "ssh://git@github.com/FhenixProtocol/tfhe-rs.git", branch = "wasm32-custom-seeder", features = ["boolean", "integer", "shortint", "custom-seeder", "experimental-force_fft_algo_dif4"] }
serde = "1.0.163"
bincode = "1.3.3"
thiserror = "1.0.38"
once_cell = "1.18.0"
log = "0.4.19"
hex = "0.4.3"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.4.0"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
