[package]
name = "tfhe-wrapper"
version = "0.0.2"
publish = false
authors = ["Fhenix <fhenixprotocol@users.noreply.github.com>"]
edition = "2021"
description = "Go bindings for tfhe-rs"
repository = ""
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[example]]
name = "wasm"
path = "examples/bind-to-wasm.rs"
crate-type = ["cdylib"]
required-features = ["wasm32"]
#[[example]]
#name = "tfhestatic"
#path = "src/examples/tfhestatic.rs"
#crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []
wasm32 = ["tfhe/custom-seeder"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
errno = { version = "0.3.1" }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "aarch64")))'.dependencies]
tfhe = { git = "https://github.com/fhenixprotocol/tfhe-rs", branch = "0.3.0-wasm32-custom-seeder", features = [
    "experimental-force_fft_algo_dif4",
    "shortint",
    "integer",
    "boolean",
    "seeder_x86_64_rdseed",
] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { git = "https://github.com/fhenixprotocol/tfhe-rs", branch = "0.3.0-wasm32-custom-seeder", features = [
    "experimental-force_fft_algo_dif4",
    "shortint",
    "integer",
    "boolean",
    "custom-seeder",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tfhe = { git = "https://github.com/fhenixprotocol/tfhe-rs", branch = "0.3.0-wasm32-custom-seeder", features = [
    "experimental-force_fft_algo_dif4",
    "shortint",
    "integer",
    "boolean",
    "custom-seeder",
] }

[dependencies]
tfhe = { git = "https://github.com/fhenixprotocol/tfhe-rs", branch = "0.3.0-wasm32-custom-seeder", features = [
    "experimental-force_fft_algo_dif4",
    "shortint",
    "integer",
    "boolean",
] }
ctor = "0.1.13"
serde = "1.0.163"
bincode = "1.3.3"
thiserror = "1.0.38"
once_cell = "1.18.0"
log = "0.4.19"
hex = "0.4.3"
fern = "0.6"
humantime = "2.1.0"
homedir = "0.2.1"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.4.0"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
